--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,7 +143,7 @@ select:focus    { border:1px solid #999; background:#fff; }
 .meta__paragraph a:hover{
   color: #444;
 }
-/* TOGGLE
+/* TRIGGER
 /////////////////////////////////////////////////////////////////*/
 .meta__trigger {
   background: #e3e3e0;
