--- a/assets/css/intro.css
+++ b/assets/css/intro.css
@@ -25,11 +25,11 @@ header h1 a img	{ margin: 0 0 0 -20px; float: none;}
 header p        { width: 250px; font: italic 14px/18px "Georgia", Georgia, serif; color: #aaa;}
 
 .photobooth     { position: absolute; top: 20px; right: 0; height: 190px; padding: 0; box-shadow: 0 5px 4px -4px rgba(0,0,0,0.2);}
-.photobooth img { 
-  padding: 5px; 
-  background: #fff; 
-  border: 1px solid #e3e3e0; 
-  border-bottom: 1px solid #C7C7C4; 
+.photobooth img {
+  padding: 5px;
+  background: #fff;
+  border: 1px solid #e3e3e0;
+  border-bottom: 1px solid #C7C7C4;
   margin: 0;
   width: 178px;
   height: 178px;
@@ -42,7 +42,7 @@ header p        { width: 250px; font: italic 14px/18px "Georgia", Georgia, serif
 /////////////////////////////////////////////////////////////////*/
 .coda-slider-wrapper { border-bottom: 1px solid #fff; border-radius: 2px; margin-top: -1px;}
 .coda-slider {
-  background: #e3e3e0; 
+  background: #e3e3e0;
   border:1px solid #d7d7d5;
   border-top:none;
   border-radius: 2px;
@@ -56,18 +56,18 @@ header p        { width: 250px; font: italic 14px/18px "Georgia", Georgia, serif
 .coda-slider-wrapper.arrows .coda-slider .panel { width: 468px }
 .coda-slider-wrapper.arrows .coda-slider { margin: 0 10px }
 .coda-slider .panel-content { padding: 30px 0 2px 0 }
-.coda-slider .panel-content ul{ margin: 0; padding: 0; list-style: none;}
-.coda-slider .panel-content ul li			{ padding: 0 0 0 10px; margin: 0 0 28px; min-height: 32px;}
-.coda-slider .panel-content ul.cols-2 li{ margin: 0 0 28px 0; width: 220px; float: left;}
-.coda-slider .panel-content ul.cols-2 li.last{ }
-.coda-slider .panel-content ul li a  		{ display: block; font-weight: normal;}
-.coda-slider .panel-content ul li img	{ float: left; margin: 0;}
-.coda-slider .panel-content ul li h3,
-.coda-slider .panel-content ul li a h3{ margin: 0 0 0 40px; margin-bottom: 0; font-weight: bold;}
-.coda-slider .panel-content ul li h3 a{ font-weight: bold;}
-.coda-slider .panel-content ul li p  		{ margin: 0 0 0 40px; font-size: 11px; color: #aaa;}
-.coda-slider .panel-content ul li p a	{ color: #aaa;}
-.coda-slider .panel-content ul li p strong{ color: #444;}
+.coda-slider .panel-content .panel-list { margin: 0; padding: 0; list-style: none;}
+.coda-slider .panel-content .panel-list  li			{ padding: 0 0 0 10px; margin: 0 0 28px; min-height: 32px;}
+.coda-slider .panel-content .panel-list.cols-2 li{ margin: 0 0 28px 0; width: 220px; float: left;}
+.coda-slider .panel-content .panel-list.cols-2 li.last{ }
+.coda-slider .panel-content .panel-list  li a  		{ display: block; font-weight: normal;}
+.coda-slider .panel-content .panel-list  li img	{ float: left; margin: 0;}
+.coda-slider .panel-content .panel-list  li h3,
+.coda-slider .panel-content .panel-list  li a h3{ margin: 0 0 0 40px; margin-bottom: 0; font-weight: bold;}
+.coda-slider .panel-content .panel-list  li h3 a{ font-weight: bold;}
+.coda-slider .panel-content .panel-list  li p  		{ margin: 0 0 0 40px; font-size: 11px; color: #aaa;}
+.coda-slider .panel-content .panel-list  li p a	{ color: #aaa;}
+.coda-slider .panel-content .panel-list  li p strong{ color: #444;}
 .coda-slider .panel-content p.read_more { text-align: right; padding: 0 10px; margin-bottom: 10px;}
 .coda-slider .panel-content p.read_more a{ color: #aaa; font-size: 11px;}
 .coda-slider .panel-content p.read_more a:hover{ color: #444; font-size: 11px;}
@@ -76,30 +76,30 @@ header p        { width: 250px; font: italic 14px/18px "Georgia", Georgia, serif
 .coda-nav-right a { }
 .coda-nav ul { clear: both; display: block; margin: auto; overflow: hidden; position: relative; top: 2px; z-index: 9999;}
 .coda-nav ul li { display: inline }
-.coda-nav ul li a { 
+.coda-nav ul li a {
   border: 1px solid transparent;
   border-bottom: none;
   border-top: none;
   border-radius: 2px;
   color: #bbb;
-  display: block; 
+  display: block;
   float: left;
-  font-size: 11px; 
-  font-weight: normal; 
-  padding: 5px 10px; 
-  text-decoration: none; 
-  text-transform: uppercase; 
+  font-size: 11px;
+  font-weight: normal;
+  padding: 5px 10px;
+  text-decoration: none;
+  text-transform: uppercase;
 }
-.coda-nav ul li a:hover{ 
+.coda-nav ul li a:hover{
   color: #444;
 }
-.coda-nav ul li a.current { 
-  background: #e3e3e0; 
-  border: 1px solid #d7d7d5; 
+.coda-nav ul li a.current {
+  background: #e3e3e0;
+  border: 1px solid #d7d7d5;
   border-top: none;
   border-bottom: none;
   box-shadow: inset 0 2px 1px rgba(0,0,0,0.1);
-  color: #444; 
+  color: #444;
 }
 .coda-slider p.loading { padding: 20px; text-align: center; margin: 0;}
 .coda-slider p.loading img { float: none; margin: 20px 0;}
@@ -112,9 +112,9 @@ header p        { width: 250px; font: italic 14px/18px "Georgia", Georgia, serif
 .coda-nav-left a,
 .coda-nav-right a { display: block; text-align: center; text-decoration: none }
 
-.sub_headline { 
-  text-transform: uppercase; 
-  font-size: 12px; 
+.sub_headline {
+  text-transform: uppercase;
+  font-size: 12px;
   font-weight: normal;
   border-bottom: 1px solid #d7d7d5;
   margin: 0 10px 2em;
@@ -124,7 +124,7 @@ header p        { width: 250px; font: italic 14px/18px "Georgia", Georgia, serif
 
 /* LARGE ICONS
 /////////////////////////////////////////////////////////////////*/
-.bio p{ 
+.bio p{
   padding: 0 20px;
 }
 .bio .sub_headline{
