--- a/assets/css/intro.css
+++ b/assets/css/intro.css
@@ -156,7 +156,7 @@ header p        { width: 250px; font: italic 14px/18px "Georgia", Georgia, serif
 }
 
 .icon-large-interactivethings.hover{
-  background-color: #21d9b7;
+  background-color: #003B5C;
 }
 .icon-large-datavisualization.hover{
   background-color: #d9212d;
