--- a/assets/css/lib/reset.css
+++ b/assets/css/lib/reset.css
@@ -1,6 +1,7 @@
 /* RESET
 /////////////////////////////////////////////////////////////////*/
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code,
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
 b, u, i, center,
@@ -40,3 +41,6 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+/* *, *:before, *:after {
+	box-sizing: border-box;
+} */
