--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -85,12 +85,29 @@ SECTIONS
 .section-title__span--right {
   float: right;
 }
-
 /* NAVIGATION
 /////////////////////////////////////////////////////////////////*/
 .navigation{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  bottom: 0;
   background: #e3e3e0;
+  z-index: 1000;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0ms ease-out 200ms,
+              opacity 200ms ease-out 200ms;
 }
+.navigation--active {
+  visibility: visible;
+  opacity: 1;
+  transition: visibility 0ms ease-out 0ms,
+              opacity 200ms ease-out 0ms;
+}
+
 .navigation__container{
   width: 950px;
   margin-right: auto;
@@ -99,11 +116,22 @@ SECTIONS
   position: relative;
 }
 .navigation__panel{
-  display: none;
   padding: 32px 0 64px;
+  opacity: 0;
+  transform: translateY(100px);
+  transition: opacity 200ms ease-out 0ms,
+              transform 200ms ease-out 0ms;
+}
+.navigation--active .navigation__panel{
+  opacity: 1;
+  transform: translateY(200px);
+  transition: opacity 200ms ease-out 0ms,
+              transform 200ms ease-out 0ms;
 }
 .navigation__heading {
   font-family: "ff-netto-web",sans-serif;
+  font-size: 16px;
+  margin-bottom: 0;
 }
 .navigation__list {
   margin: 0;
@@ -114,21 +142,16 @@ SECTIONS
 
 }
 .navigation__link {
-  background: #efefec;
   display: block;
   box-sizing: border-box;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.1);
-  min-height: 120px;
-  padding: 10px;
-  transition: background-color 200ms, box-shadow 200ms;
+  border-bottom: 1px solid #d4d5d3;
+  padding: 1em 0;
 }
 .navigation__link:hover{
-  color: #444;
-  background: #fff;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
 }
 .navigation__title{
   font-family: "ff-netto-web",sans-serif;
+  font-size: 24px;
   display: block;
 }
 .navigation__claim{
@@ -150,6 +173,7 @@ SECTIONS
   width: 20px;
   padding: 10px;
   height: 20px;
+  z-index: 2000;
 }
 .navigation__trigger span {
   position: absolute;
