--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -100,22 +100,58 @@ SECTIONS
   margin-right: auto;
   margin-left: auto;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
+}
+.tools__section {
+  position: relative;
 }
 @media (min-width: 768px) and (max-width: 979px) {
+  .tools { position: relative;}
   .tools__container{width:710px;}
 }
 @media (max-width: 767px) {
-  .tools__container{ width: auto; margin: 0 20px;}
+  .tools { position: relative;}
+  .tools__container{ width: auto;}
 }
-/* TRIGGER
+/* HOME LINK
+/////////////////////////////////////////////////////////////////*/
+.home__link {
+  opacity: 0;
+  visibility: hidden;
+  height: 20px;
+  padding: 10px;
+  transform: translateX(-10px);
+  display: flex;
+  align-items: center;
+  color: #aaa;
+  transition: opacity 400ms ease-in 0ms,
+              visibility 400ms ease-in 0ms;
+}
+.home__link--active {
+  position: fixed;
+  visibility: visible;
+  opacity: 1;
+  transition: opacity 400ms ease-out 400ms,
+              visibility 400ms ease-out 400ms;
+}
+.home__link span {
+  display: inline-block;
+  font-size: 12px;
+  text-transform: uppercase;
+  margin-left: 0.5em;
+}
+/* NAVIGATION TRIGGER
 /////////////////////////////////////////////////////////////////*/
 .navigation__trigger {
   display: block;
+  height: 20px;
   width: 20px;
   padding: 10px;
-  height: 20px;
   transform: translateX(10px);
+}
+.navigation__trigger--active {
+  position: fixed;
+  transform: translateX(-30px);
 }
 .navigation__trigger span {
   position: absolute;
@@ -234,7 +270,7 @@ SECTIONS
   margin-bottom: 0;
 }
 .navigation__list {
-  margin: 0;
+  margin: 0 0 50px;
   padding: 0;
   list-style: none;
 }
@@ -266,8 +302,12 @@ SECTIONS
   color: #444;
 }
 @media (min-width: 768px) and (max-width: 979px) {
+  .navigation {justify-content: flex-start; padding-top: 40px;}
   .navigation__container{width:710px;}
+  .navigation__claim {display: none;}
 }
 @media (max-width: 767px) {
+  .navigation {justify-content: flex-start; padding-top: 40px;}
   .navigation__container{ width: auto; margin: 0 20px;}
+  .navigation__claim {display: none;}
 }
